--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -45,6 +45,24 @@
 
                 {{ loading() ? 'Accesso in corso...' : 'Accedi con Google' }}
             </button>
+
+            <div class="relative flex items-center py-2">
+                <div class="flex-grow border-t border-gray-300 dark:border-gray-600"></div>
+                <span class="flex-shrink mx-4 text-gray-400 text-xs uppercase">Oppure</span>
+                <div class="flex-grow border-t border-gray-300 dark:border-gray-600"></div>
+            </div>
+
+            <button 
+                (click)="signInAsGuest()"
+                [disabled]="loading()"
+                class="w-full flex items-center justify-center px-4 py-3 border border-gray-300 dark:border-gray-600 text-sm font-medium rounded-lg text-gray-700 dark:text-gray-200 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors duration-200 shadow-sm disabled:opacity-50 disabled:cursor-not-allowed border-dashed">
+                
+                <svg class="w-5 h-5 mr-2 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                </svg>
+
+                Entra come ospite (senza salvataggio dati)
+            </button>
         </div>
     </div>
 </div>
